2006-08-14  Edward Hervey  <edward@fluendo.com>

	* ABOUT-NLS:
	* intltool-extract.in:
	* intltool-merge.in:
	* intltool-update.in:
	new files
	* Makefile.am:
	Added new files, support for uninstalled locales and build of po/
	* bin/pitivi.in:
	support for i18n
	* configure.ac:
	support for i18n
	* pitivi/ui/mainwindow.py:
	First python file with i18n support (Advanced view)
	* po/LINGUAS:
	Added french
	* po/POTFILES.in:
	Added pitivi/ui/mainwindow.py file
	* po/fr.po:
	new french translation.

2006-08-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Commented out the reporting of Warning messages to the UI.
	If it is really fatal to playback/editing/encoding, it should have been
	an Error message.

2006-08-09  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Added switchToTimeline() method.
	Don't seek to values lower than 0.
	* pitivi/timeline.py:
	Add default sources behaviours in compositions.
	Added setDefaultSource() and getDefaultSource() methods.
	* pitivi/ui/complexinterface.py:
	pixelToNs should return a long (to cope with 2**64 values).
	* pitivi/ui/complexlayer.py:
	Don't expand audio tracks at startup.
	* pitivi/ui/ruler.py:
	Allow seeking on the ruler.
	* pitivi/ui/sourcefactories.py:
	Use the source thumbnail as the icon pixbuf when doing drag and drop.
	* pitivi/ui/timelineobjects.py:
	Switch to Timeline in the playground if we drop something in it.
	* pitivi/ui/viewer.py:
	Use bilinear scaling method with videoscale.
	Use videosink pad to figure out caps modifications.

2006-08-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	Only set the XID of the viewer window, on the video sink, once it is
	realized.

2006-07-12  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/elementsettingsdialog.glade:
	* pitivi/ui/encodingdialog.glade:
	* pitivi/ui/exportsettingswidget.glade:
	* pitivi/ui/projectsettings.glade:
	Removed whitespaces in front of punctuation in dialogbox.
	Fixes #346585.
