@@ -3,7 +3,6 @@
 *.pot
 Makefile
 Makefile.in
-Makefile.in.in
 POTFILES
 cat-id-tbl.c
 messages
